fix: Table row alignment

--- a/resources/assets/css/liman-newlook.css
+++ b/resources/assets/css/liman-newlook.css
@@ -509,7 +509,8 @@ table.table thead th
 
 table.table td
 {
-	border-top:1px rgba(128,128,128,0.15) solid!important
+	border-top:1px rgba(128,128,128,0.15) solid!important;
+    vertical-align: middle
 }
 
 .table-hover tbody tr
